0.1.8

2016-04-07  Brecht Sanders  https://github.com/brechtsanders/

  * fixed issue with callback data pointer in row callback function

0.1.7

2016-03-28  Brecht Sanders  https://github.com/brechtsanders/

  * changed integer type to int64_t in xlsxiowrite_add_cell_int() and xlsxioread_sheet_next_cell_int()

0.1.6

2016-03-24  Brecht Sanders  https://github.com/brechtsanders/

  * delete destination file before writing to it
  * fixed corruption issue when closing if no rows were written

0.1.5

2016-03-20  Brecht Sanders  https://github.com/brechtsanders/

  * fixed issue with detecting witdh of columns with NULL data
  * changed witdh detection to only count first line of multiline data
  * fixed issue with inserting empty rows
  * only freezes top row when columns were specified

0.1.4

2016-03-19  Brecht Sanders  https://github.com/brechtsanders/

  * optimized code for writing cell data
  * added witdh parameter to xlsxiowrite_add_column()
  * added column witdh detection and xlsxiowrite_set_detection_rows()
  * added xlsxiowrite_set_row_height()

0.1.3

2016-03-17  Brecht Sanders  https://github.com/brechtsanders/

  * now reading ignores hidden rows
  * added support for writing column names: xlsxiowrite_add_column()
  * simplified xlsxio_write.c by using FILE* handles
  * added sheetname parameter to xlsxiowrite_open()

0.1.2

2016-03-15  Brecht Sanders  https://github.com/brechtsanders/

	* added xlsxioread_sheetlist_ functions for getting worksheet names
	* fixed Excel error: "That command cannot be used on multiple selections"
	* use simpler folder structure inside .xlsx file

0.1.1

2016-03-13  Brecht Sanders  https://github.com/brechtsanders/

	* added header file with version information
	* additional functions for reading cells (integer, floating point, date/time)

2016-03-12  Brecht Sanders  https://github.com/brechtsanders/

	* add support multiline text fields
	* set date/time value to proper display format
