@@ -17,6 +17,8 @@
 		<Project filename="example_xlsxio_read_advanced.cbp">
 			<Depends filename="libxlsxio_read_shared.cbp" />
 		</Project>
-		<Project filename="test1.cbp" />
+		<Project filename="xlsxio_xlsx2csv.cbp">
+			<Depends filename="libxlsxio_read_shared.cbp" />
+		</Project>
 	</Workspace>
 </CodeBlocks_workspace_file>
